# nanobuild

./: .gitignore  LICENSE  README.md  build_and_upload.sh  nb.py  pyproject.toml  requirements.txt  setup.cfg
examples/simple_cpp/: build.py  not_bird.cpp
examples/simple_cpp/stuff/: bird.hpp
examples/submodules/: .gitignore  build.py
examples/submodules/bird/: build.py
examples/submodules/main/: build.py  main.cpp
examples/submodules/not_bird/: build.py  not_bird.hpp
src/nanobuild/: __init__.py  builder.py  environment.py  main.py  target.py  utility.py
test/: build.py  test.cpp
test/stuff/: bird.cpp
