[metadata]
name = nanobuild
version = 0.2.3
author = Tiberiu Chibici
author_email = chibicitiberiu@zoho.eu
description = A very simple and customizable build system made in Python that generates Ninja.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chibicitiberiu/nanobuild
project_urls =
    Bug Tracker = https://github.com/chibicitiberiu/nanobuild/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
